--- a/.env.localhost
+++ b/.env.localhost
@@ -2,3 +2,8 @@ LOCAL_DOMAIN_ZONE=localhost
 DOCKER_IP=172.17.0.1
 # You need to set the ip address of your machine.
 HOST_IP=
+
+# info https://github.com/docker-library/docs/tree/master/postgres
+POSTGRES_USER=user
+POSTGRES_PASSWORD=user123!
+POSTGRES_DB=base
