--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,13 @@ services:
         traefik.port: "81"
     network_mode: "host"
 
+  database:
+    image: "postgres:12"
+    volumes:
+      - database-data:/var/lib/postgresql/data/
+    networks:
+      - docker_base
+
   dns:
     restart: always
     image: defreitas/dns-proxy-server:2.9.1
@@ -43,6 +50,8 @@ services:
       networks:
         - docker_base
 
+volumes:
+  database-data:
 
 networks:
   docker_base:
